assets/style/style.css
/* ... */
@media screen and (max-width: 768px) {

    /* Main Wallet page */
    #PrivateTxt {
        font-size: 17px;
    }
    #PrivateCipheredTxt{
        font-size: 17px;
    }

    #PublicTxt {
        font-size: 25px;
    }

    /* Paddings - text */
    .dashboard-item {
        padding-left: 5%;
        padding-right: 5%;
    }

    /* Dashboard page */

    #balance-box {
        width: 92%;
        height: 120px;
    }

    #guiBalanceBox {
        margin: 0;
    }

    #address-box.large-box {
        height: 240px;
        background: none;
    }

    #address-info {
        width: 65%;
    }

    #pubkey-box {
        padding-top: 40px;
    }

    #pubkey-box .pivx-button-big {
        width: 225px !important;
    }
}

@media screen and (max-width: 767px) {

    /* Tables */
    table td {
        max-width: 80px;
    }

    table td a {
        width: 100%;
    }

    table td a code {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 100%;
        min-width: 30px
    }

    /* Dashboard */

    #genKeyWarning .pivx-button-big {
        padding: 13px 20px;
    }

    #piv-ring {
        display: none;
    }

    #window-icon-piv {
        padding: 30px 0 30px 30px;
    }

    #ring {
        padding: 0 5px 20px 50px;
    }

    #identicon {
        height: 60px;
        width: 60px;
    }

    /* Stake page */

    .add-frame {
        height: 1000px !important;
    }

    .stake-box.large-box.col-md-4 {
        padding: 10px 20px;
        width: 85% !important;
    }

    .modal-dialog {
        max-width: 100%;
        margin: 0;
    }

    .modal-content {
        height: 100%;
    }

    .modal-body {
        overflow-y: auto;
    }
}

@media screen and (max-width: 600px) {

    /* Buttons - Hide icons or it will be deformed */
    .buttoni-arrow,
    .buttoni-icon {
        display: none;
    }

    /* Main Wallet page */
    #PrivateTxt {
        font-size: 13px;
    }
    #PrivateCipheredTxt{
        font-size: 13px;
    }

    #PublicTxt {
        font-size: 17px;
    }

    /* STAKE page */

    #staking-box {
        padding: 30px 5px 30px 35px;
    }

    #stake-title {
        font-size: 25px;
    }

    #submit-button.pivx-button-big {
        padding: 14px 85px 14px 100px;
        margin-top: 20px;
    }

    /* Dashboard */

    #address-info {
        width: 55%;
    }
}

@media screen and (max-width: 550px) {

    /* Dashboard page */

    #bcg-wallet-box {
        height: 100%;
    }

    #ring {
        padding: 5px 5px 30px 40px;
        vertical-align: top;
    }

    #bal-title {
        padding: 45px 40px 45px 20px;
    }

    #window-icon-piv {
        padding: 30px 0;
    }

    #address-box.large-box {
        padding-top: 20px;
        height: 250px;
        /*background: linear-gradient(217deg, rgb(51, 0, 153, 0.1), rgb(34, 0, 102, 0.3) 70.71%);*/
        border-color: #763acf;
    }

    #title-address-box {
        width: auto;
        padding: 10px 20px 0 20px;
    }

    #box-info-address {
        padding-top: 25px;
    }

    #address-info {
        width: 59%;
    }

    /* STAKE page */

    #info {
        margin-bottom: 35px;
    }
}

@media screen and (max-width: 535px) {

    /* Dashboard */

    #pubkey-box .pivx-button-big {
        width: 200px !important;
    }
}

@media screen and (max-width: 510px) {

    /* Dashboard page */

    #pubkey-box .pivx-button-big {
        padding: 12px 10px;
    }

    /* Settings page */
    #Settings {
        text-align: center;
    }

    #icon-box-piv {
        display: none;
    }

    #pivx-price-box {
        width: 130px;
    }
}

@media screen and (max-width: 480px) {

    /* Main Wallet page */
    #PrivateTxt {
        font-size: 8px;
    }
    #PrivateCipheredTxt{
        font-size: 8px;
    }

    #PublicTxt {
        font-size: 13px;
    }

    /* Stake */


    #pivx-price-box {
        width: auto;
    }

    /* Dashboard */

    #number-piv {
        padding: 15px 5px 15px 40px;
    }

    #ring {
        padding: 5px 5px 30px 30px;
    }

    #pubkey-padd {
        padding-top: 40px;
    }
}

@media screen and (max-width: 420px) {

    /* Send */

    .max-width {
        width: 98%;
    }

    #Transaction.tabcontent {
        padding: 10px 15px 110px 15px;
    }

    /* Settings page */

    #submit-button.pivx-button-big {
        display: block;
        height: auto;
        margin: 0 auto;
    }

    .buttoni-arrow {
        display: none;
    }

    #navbarToggler {
        position: sticky;
        left: 290px;
    }

    /* Dashboard */


    #piv-ring {
        display: none !important;
    }

    #guiBalanceBox {
        font-size: 18px !important;
    }

    #balance-box h3 {
        font-size: 20px;
    }

    #identicon {
        width: 55px;
        height: 55px;
    }

    #pubkey-box .pivx-button-big {
        padding: 11px 10px;
    }

    #pubkey-box.col-md-4 {
        padding-top: 20px;
    }
}

@media screen and (max-width: 393px) {

    /* Dashboard */

    #piv-price-amount {
        padding: 30px 15px;
    }

    #address-box.large-box {
        padding-top: 15px;
        height: 255px;
    }

    #title-address-box {
        padding: 18px 20px 0 15px;
    }

    #ring {
        padding: 5px 5px 30px 20px;
    }

    #address-info {
        padding-left: 15px;
    }

    #pubkey-padd {
        padding-top: 30px;
    }
}

@media screen and (max-width: 380px) {

    /* Nav */
    #navbarToggler {
        left: 180px;
    }

    /* Stake */

    #staking-box {
        padding: 30px 10px 35px 10px;
        height: auto;
        width: auto;
    }

    /* Dashboard */

    #number-piv {
        padding: 15px 5px 15px 35px;
    }

    #bal-title {
        padding: 45px 30px 45px 10px;
    }

    #balance-box h3 {
        font-size: 24px;
    }

    #pubkey-box .pivx-button-big {
        padding: 11px 10px;
    }
}
/* ... */

